# proxy-master

./: .gitignore  CMakeLists.txt  README.md  build-appimage.sh
misc/: proxy-master.desktop
src/: about_dialog.cpp  about_dialog.hpp  cmake_version.hpp.cfg  logger.cpp  logger.hpp  main.cpp  manage_window.cpp  manage_window.hpp  master_window.cpp  master_window.hpp  sdl_backend_helper.hpp  switch_widget.cpp
src/libproxy_handler/: proxy_handler.cpp  proxy_handler.hpp
src/switch_widget/: switch_widget.cpp  switch_widget.hpp
ui/: dark.txt
